# capicxx-dbus-runtime

./: .gitignore  CHANGES  CMakeLists.txt  CommonAPI-DBus-uninstalled.pc.in  CommonAPI-DBus.pc.in  CommonAPI-DBus.sln  CommonAPI-DBus.vcxproj  DBusMessage.cpp  DBusMessage.hpp  DBusPolymorphicTest  INSTALL  LICENSE  Makefile.am  NEWS  README  README.html  README.md  TODO  UnitTests.vcxproj  configure.ac  dbus-DBusMessage-disable-data-validation.patch  doxygen.cfg  eclipse-code-style-formatter.xml
src/test/: CMakeLists.txt  DBusAddressTranslatorTest.cpp  DBusBenchmarkingTest.cpp  DBusBroadcastTest.cpp  DBusClientIdTest.cpp  DBusCommunicationTest.cpp  DBusConnectionTest.cpp  DBusDaemonProxyTest.cpp  DBusFactoryTest.cpp  DBusFreedesktopPropertiesTest.cpp  DBusInputStreamTest.cpp  DBusLoadTest.cpp  DBusMainLoopIntegrationTest.cpp  DBusManagedTest.cpp  DBusMultipleConnectionTest.cpp  DBusNameCacheTest.cpp  DBusObjectManagerStubTest.cpp  DBusOutputStreamTest.cpp  DBusPolymorphicTest.cpp  DBusProxyTest.cpp  DBusRuntimeTest.cpp  DBusSelectiveBroadcastTest.cpp  DBusSerializableStructTest.cpp  DBusSerializableStructTest.h  DBusServicePublisherTest.cpp  DBusServiceRegistryTest.cpp  DBusStubAdapterTest.cpp  DBusTestUtils.h  DBusTestUtils.hpp  DBusTypeStreamTest.cpp  DBusVariantOutputStreamTest.cpp  DBusVariantTest.cpp  DemoMainLoop.h  DemoMainLoop.hpp  DemoPoll.cpp  DemoPoll.h  FakeGlueCode.cpp  README.txt  commonapi-dbus.ini  fakeLegacyService.fidl  (+8 more)
src/test/commonapi/tests/: DerivedTypeCollection.cpp  DerivedTypeCollection.h  DerivedTypeCollection.hpp  ExtendedInterface.h  ExtendedInterfaceDBusProxy.cpp  ExtendedInterfaceDBusProxy.h  ExtendedInterfaceDBusStubAdapter.cpp  ExtendedInterfaceDBusStubAdapter.h  ExtendedInterfaceProxy.h  ExtendedInterfaceProxyBase.h  ExtendedInterfaceStub.h  ExtendedInterfaceStubDefault.cpp  ExtendedInterfaceStubDefault.h  PredefinedTypeCollection.h  PredefinedTypeCollection.hpp  TestFreedesktopDerivedInterface.h  TestFreedesktopDerivedInterfaceDBusProxy.cpp  TestFreedesktopDerivedInterfaceDBusProxy.h  TestFreedesktopDerivedInterfaceDBusStubAdapter.cpp  TestFreedesktopDerivedInterfaceDBusStubAdapter.h  TestFreedesktopDerivedInterfaceProxy.h  TestFreedesktopDerivedInterfaceProxyBase.h  TestFreedesktopDerivedInterfaceStub.h  TestFreedesktopDerivedInterfaceStubDefault.cpp  TestFreedesktopDerivedInterfaceStubDefault.h  TestFreedesktopInterface.h  TestFreedesktopInterfaceDBusProxy.cpp  TestFreedesktopInterfaceDBusProxy.h  TestFreedesktopInterfaceDBusStubAdapter.cpp  TestFreedesktopInterfaceDBusStubAdapter.h  TestFreedesktopInterfaceProxy.h  TestFreedesktopInterfaceProxyBase.h  TestFreedesktopInterfaceStub.h  TestFreedesktopInterfaceStubDefault.cpp  TestFreedesktopInterfaceStubDefault.h  TestInterface.h  TestInterfaceDBusProxy.cpp  TestInterfaceDBusProxy.h  TestInterfaceDBusStubAdapter.cpp  TestInterfaceDBusStubAdapter.h  (+5 more)
src/test/commonapi/tests/managed/: BranchInterface.h  BranchInterfaceDBusProxy.cpp  BranchInterfaceDBusProxy.h  BranchInterfaceDBusStubAdapter.cpp  BranchInterfaceDBusStubAdapter.h  BranchInterfaceProxy.h  BranchInterfaceProxyBase.h  BranchInterfaceStub.h  BranchInterfaceStubDefault.cpp  BranchInterfaceStubDefault.h  LeafInterface.h  LeafInterfaceDBusProxy.cpp  LeafInterfaceDBusProxy.h  LeafInterfaceDBusStubAdapter.cpp  LeafInterfaceDBusStubAdapter.h  LeafInterfaceProxy.h  LeafInterfaceProxyBase.h  LeafInterfaceStub.h  LeafInterfaceStubDefault.cpp  LeafInterfaceStubDefault.h  RootInterface.h  RootInterfaceDBusProxy.cpp  RootInterfaceDBusProxy.h  RootInterfaceDBusStubAdapter.cpp  RootInterfaceDBusStubAdapter.h  RootInterfaceProxy.h  RootInterfaceProxyBase.h  RootInterfaceStub.h  RootInterfaceStubDefault.cpp  RootInterfaceStubDefault.h  SecondRoot.h  SecondRootDBusProxy.cpp  SecondRootDBusProxy.h  SecondRootDBusStubAdapter.cpp  SecondRootDBusStubAdapter.h  SecondRootProxy.h  SecondRootProxyBase.h  SecondRootStub.h  SecondRootStubDefault.cpp  SecondRootStubDefault.h
src/test/dbusDynamicLoadingTests/: DBusDynamicLoadingBasicTest.cpp  DBusDynamicLoadingDefinitions.h  DBusDynamicLoadingMixedValidityTest.cpp  DBusDynamicLoadingMultipleBindingsTest.cpp  DBusDynamicLoadingMultipleDefinitionTest.cpp  DBusDynamicLoadingNoValidityTest.cpp
src/test/dbusDynamicLoadingTests/fakeTestBinding/: FakeBinding.cpp  FakeBinding.h
src/test/fake/legacy/service/: LegacyInterface.h  LegacyInterfaceDBusProxy.cpp  LegacyInterfaceDBusProxy.h  LegacyInterfaceDBusStubAdapter.cpp  LegacyInterfaceDBusStubAdapter.h  LegacyInterfaceProxy.h  LegacyInterfaceProxyBase.h  LegacyInterfaceStub.h  LegacyInterfaceStubDefault.cpp  LegacyInterfaceStubDefault.h
src/test/fakeLegacyService/: fakeLegacyService.py  sendToFakeLegacyService.py
src/test/fakeLegacyService/fake/legacy/service/: LegacyInterface.h  LegacyInterfaceDBusProxy.cpp  LegacyInterfaceDBusProxy.h  LegacyInterfaceProxy.h  LegacyInterfaceProxyBase.h
src/test/src-gen/commonapi/tests/: DerivedTypeCollection.cpp  DerivedTypeCollection.hpp  PredefinedTypeCollection.hpp
src/test/src-gen/core/commonapi/tests/: DerivedTypeCollection.cpp  DerivedTypeCollection.hpp  PredefinedTypeCollection.hpp
src/test/src-gen/dbus/commonapi/tests/: DerivedTypeCollectionDBusDeployment.cpp  DerivedTypeCollectionDBusDeployment.hpp  PredefinedTypeCollectionDBusDeployment.cpp  PredefinedTypeCollectionDBusDeployment.hpp
src/test/src-gen/v1_0/commonapi/tests/: ExtendedInterface.hpp  ExtendedInterfaceDBusProxy.cpp  ExtendedInterfaceDBusProxy.hpp  ExtendedInterfaceDBusStubAdapter.cpp  ExtendedInterfaceDBusStubAdapter.hpp  ExtendedInterfaceProxy.hpp  ExtendedInterfaceProxyBase.hpp  ExtendedInterfaceStub.hpp  ExtendedInterfaceStubDefault.cpp  ExtendedInterfaceStubDefault.hpp  TestFreedesktopDerivedInterfaceDBusProxy.cpp  TestFreedesktopDerivedInterfaceDBusProxy.hpp  TestFreedesktopDerivedInterfaceDBusStubAdapter.cpp  TestFreedesktopDerivedInterfaceDBusStubAdapter.hpp  TestFreedesktopInterfaceDBusProxy.cpp  TestFreedesktopInterfaceDBusProxy.hpp  TestFreedesktopInterfaceDBusStubAdapter.cpp  TestFreedesktopInterfaceDBusStubAdapter.hpp  TestInterface.hpp  (+9 more)
(+448 files in other folders)
